# timecode-vst-aax

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-plugins.yml
docs/: research.md
src/: LtcGenerator.h  PluginProcessor.cpp  PluginProcessor.h
tools/: ltc_decode_packets.cpp
